// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should display headers when headers are passed in 1`] = `
<div>
  <div
    class="autocomplete"
  >
    <div
      class="wrapper"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440033"
        >
          placeholder_name
        </label>
        <input
          autocomplete="off"
          class="input"
          id="123e4567-e89b-12d3-a456-426655440033"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an Autocomplete 1`] = `
<div>
  <div
    class="autocomplete"
  >
    <div
      class="wrapper"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440001"
        >
          placeholder_name
        </label>
        <input
          autocomplete="off"
          class="input"
          id="123e4567-e89b-12d3-a456-426655440001"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
